--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -26,9 +26,10 @@ h1 {
 
 .btn {
   font: inherit;
-  color: white;
+  color: #d4d4d4;
   background: #ffa03c;
   width: 6rem;
+  font-size: 18px;
   cursor: pointer;
   border: 3px solid #ffa03c;
 }
@@ -40,9 +41,9 @@ h1 {
 
 label {
   display: block;
-  color: burlywood;
-  padding-top: 5px;
-  font-size: 20px;
+  color: #9ba393;
+  padding-top: 8px;
+  font-size: 22px;
   font-weight: 300;
 }
 
@@ -61,7 +62,7 @@ label {
   padding: 1rem;
   height: 3.5rem;
   justify-content: center;
-  background: #8182ce;
+  background: #317be9;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -70,7 +71,7 @@ label {
   padding: 1rem;
   height: 1.5rem;
   justify-content: center;
-  background: #b18853;
+  background: #618a32;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -79,6 +80,6 @@ label {
   padding: 1rem;
   height: 3rem;
   justify-content: center;
-  background: #b15353;
+  background: #d14848;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
