--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #28283a;
+  background: #323249;
   color: #d4d4d4;
-  font-family: 'Overpass', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Overpass", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
