regex to prevent syntax errors

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: #323249;
-  color: #d4d4d4;
+  color: #e9e9e9;
   font-family: "Overpass", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
