--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 44px;
   color: #ffa03c;
   letter-spacing: 2px;
   font-weight: 800;
@@ -26,7 +26,7 @@ h1 {
 
 .btn {
   font: inherit;
-  color: #d4d4d4;
+  color: #e9e9e9;
   background: #ffa03c;
   width: 6rem;
   font-size: 18px;
