--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -1,59 +1,74 @@
 .container {
   padding: 10% 15% 5% 15%;
-}
-
-h1 {
-  font-size: 44px;
-  color: #ffa03c;
-  letter-spacing: 2px;
-  font-weight: 800;
+  width: 70%;
 }
 
 .search-form {
+  margin: 0 auto;
   display: flex;
+  width: 100%;
   justify-content: center;
-  /* border: 3px solid #ffa03c; */
+
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
 }
 
 .input {
+  font: inherit;
   width: 100%;
+
   background: #fff;
   color: #461c1c;
   height: 2.5rem;
   border: 3px solid #ffa03c;
 }
 
-.btn {
+.input__error {
+  width: 100%;
+  font: inherit;
+  background: rgb(218, 218, 218);
+  color: #d14848;
+  font-weight: 300;
+  height: 2.5rem;
+  border: 3px solid #ffa03c;
+  /* border: 3px solid #d14848; */
+}
+
+.check__btn {
+  padding-top: 2px;
   font: inherit;
   color: #e9e9e9;
   background: #ffa03c;
-  width: 6rem;
   font-size: 18px;
   cursor: pointer;
   border: 3px solid #ffa03c;
+  text-shadow: 1px 1px 2px #b46715;
+  width: 6rem;
 }
 
-.btn:hover,
-.btn:active {
+.check__btn:hover,
+.check__btn:active {
   background: #ff992c;
 }
 
 label {
   display: block;
   color: #9ba393;
-  padding-top: 8px;
+  padding-top: 2rem;
   font-size: 22px;
   font-weight: 300;
+  text-align: center;
 }
 
-.info {
+h4 {
   margin: 0;
 }
 
+i {
+  margin-right: 5px;
+}
+
 .output__blank {
-  display: flex;
-  flex-wrap: wrap;
   margin: 0;
   padding: 1rem;
   background: transparent;
@@ -69,9 +84,9 @@ label {
 }
 
 .output__info {
-  margin: 0;
-  padding: 1rem;
-  height: 1.5rem;
+  display: block;
+  height: fit-content;
+  padding: 0.7rem;
   background: #317be9;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
@@ -79,7 +94,7 @@ label {
 .output__success {
   margin: 0;
   padding: 1rem;
-  height: 1.5rem;
+  height: fit-content;
   background: #618a32;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
@@ -87,7 +102,7 @@ label {
 .output__error {
   margin: 0;
   padding: 1rem;
-  height: 3rem;
+  height: fit-content;
   background: #d14848;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
