--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   margin: 0 auto;
   margin-top: 3rem;
-  width: 70%;
+  width: 50%;
   height: 5rem;
   display: flex;
   align-items: center;
@@ -12,7 +12,7 @@
 .logo {
   text-decoration: none;
   font: inherit;
-  font-size: 28px;
+  font-size: 48px;
   color: #ffa03c;
   letter-spacing: 1px;
   font-weight: 800;
@@ -44,11 +44,12 @@
   padding: 0.3rem 0.25rem;
   background: transparent;
   cursor: pointer;
-  vertical-align: 10%;
+  /* vertical-align: 10%; */
   margin: 0;
   border: none;
   font-size: 18px;
   font-weight: 300;
+  border-bottom: none;
 }
 
 .navbar-items a:hover {
@@ -63,7 +64,7 @@
 }
 
 .btn__sign-up {
-  font: inherit;
+  /* font: inherit; */
   color: #e9e9e9;
   background: #ffa03c;
   font-size: 18px;
@@ -77,4 +78,15 @@
 
 .btn__sign-up:hover {
   background: #ff992c;
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    margin-top: 1rem;
+    width: 90%;
+  }
+
+  .logo {
+    font-size: 38px;
+  }
 }
