--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -3,8 +3,10 @@
   display: flex;
   width: 100%;
   /* justify-content: center; */
+  justify-content: stretch;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
   /* box-sizing: border-box; */
+  height: 3rem;
 }
 
 .input {
@@ -12,8 +14,11 @@
   width: 100%;
   background: #fff;
   color: #461c1c;
-  height: 2.5rem;
-  border: 3px solid #ffa03c;
+  /* height: 2.5rem; */
+  border: solid #ffa03c;
+  border-width: 0.2rem 0 0.2rem 0.2rem;
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 
 .input__error {
@@ -22,22 +27,31 @@
   background: #fff;
   color: #d14848;
   font-weight: 700;
-  height: 2.5rem;
-  border: 3px solid #ffa03c;
+  /* height: inherit; */
+  border: solid #ffa03c;
+  border-width: 0.2rem 0 0.2rem 0.2rem;
   border-inline-start-color: #d14848;
   /* border-inline-start-width: 3px; */
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 
 .check__btn {
-  padding-top: 2px;
+  /* padding-top: 2px; */
+  padding: 0;
   font: inherit;
   color: #e9e9e9;
   background: #ffa03c;
-  font-size: 18px;
+  /* font-size: 16px; */
   cursor: pointer;
-  border: 3px solid #ffa03c;
+  /* height: inherit; */
+  border: 0.2rem solid #ffa03c;
+  text-align: center;
   text-shadow: 1px 1px 2px #b46715;
-  width: 6rem;
+  width: 5.8rem;
+  /* border-radius: 0; */
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .check__btn:hover,
@@ -75,8 +89,8 @@ i {
 }
 
 .output__info {
-  height: fit-content;
   padding: 0.7rem;
+  height: fit-content;
   background: #317be9;
   box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.5);
 }
